--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background: url("src/img/cloud.jpg");
+    background: url("./src/img/cloud.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
